src/views/About/About.css
nav {
}

.container-about {
  color: black;
  padding-bottom: 100%;
  background-color: rgba(52, 73, 94, 1);
}

.about-text {
  margin: 10%;
  background: white;
  padding: 5%;
}

.link {
  color: #001a5b;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-right: 5px;
  text-decoration: none;
  /*font-family: "Impact";*/
  font-family: Georgia, Times, Times New Roman, serif;
}

h2 {
  margin-top: 0%;
  text-align: center;
}

.last-paragraph {
  margin: 0 20%;
  text-align: center;
}

.navbar {
  padding: 0 10px;
}

